# zcnes

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Justfile  Makefile  README.md  zcnes.sln
.github/workflows/: ci.yml
Core/: Core.csproj  Cpu.cs  ICpuBus.cs
Core.Tests/: BusState.cs  BusStateJsonConverter.cs  Core.Tests.csproj  CpuState.cs  CpuTests.cs  CycleKind.cs  ProcessorTest.cs  ProcessorTestCpuBus.cs  RamState.cs  RamStateJsonConverter.cs
cmake/: zcnes.cmake
include/zcnes/: core.hpp  cpu.hpp
scripts/: genproctests.rs
src/: CMakeLists.txt  bit.hpp  bus.cpp  bus.hpp  core.cpp  core.hpp  cpu.hpp  num.hpp  ppu.cpp  ppu.hpp  scheduler.hpp
src/common/: CMakeLists.txt  file.c  file.h  log.c  log.h
src/core/: CMakeLists.txt  bit.hpp  bus.cpp  bus.h  bus.hpp  cart.cpp  core.cc  core.cpp  core.h  core.hpp  cpu.c  cpu.hpp  nes.c  nes.h  num.hpp  ppu.cpp  ppu.hpp
src/core/include/core/: core.hpp  emu.hpp
src/core/src/: apu.cpp  apu.hpp  bus.cpp  bus.hpp  cart.cpp  cart.hpp  concepts.hpp  core.cpp  core.hpp  cpu.hpp  emu.cpp  ppu.cpp  ppu.hpp  scheduler.hpp
src/cpu/: CMakeLists.txt  cpu.h  cpu.hpp
src/cpu/include/cpu/: cpu.hpp
src/frontend/: CMakeLists.txt  main.cpp  triple_buffer.hpp
src/libzcnes/: CMakeLists.txt  cpu.h
src/tharte/: CMakeLists.txt  main.c  tharte.c  tharte.h
src/zcnes/: CMakeLists.txt
src/zcnes/include/zcnes/: core.hpp
src/zcnes/src/: bus.cpp  core.cpp  core.hpp  cpu.hpp
tests/: CMakeLists.txt  blargg.c  blargg.cpp  check.hpp  processor.cpp  single_step.cpp  single_step_tests.cpp  tharte.c  util.hpp
tests/common/: CMakeLists.txt  common.h
tests/core/: CMakeLists.txt  blargg.cpp
tests/cpu/: CMakeLists.txt  json.cc  json.cpp  json.h  json.hpp  processor.cc  processor.cpp  processor.h  processor.hpp  single_step.cpp  util.cpp  util.hpp
