add_executable(blargg)
target_sources(blargg PRIVATE blargg.cpp)
target_include_directories(blargg PRIVATE .)
target_link_libraries(blargg PRIVATE core)

file(GLOB INSTR_TEST_FILES "${zcnes-tests_SOURCE_DIR}/instr_test-v5/*.nes")
foreach(INSTR_TEST_FILE ${INSTR_TEST_FILES})
  cmake_path(GET INSTR_TEST_FILE STEM INSTR_TEST_NAME)
  string(SUBSTRING "${INSTR_TEST_NAME}" 3 -1 TRIMMED_INSTR_TEST_NAME)
  add_test("instr_test-v5.${TRIMMED_INSTR_TEST_NAME}" blargg ${INSTR_TEST_FILE})
endforeach()

file(GLOB PPU_VBL_NMI_FILES "${zcnes-tests_SOURCE_DIR}/ppu_vbl_nmi/*.nes")
foreach(PPU_VBL_NMI_FILE ${PPU_VBL_NMI_FILES})
  cmake_path(GET PPU_VBL_NMI_FILE STEM PPU_VBL_NMI_NAME)
  string(SUBSTRING "${PPU_VBL_NMI_NAME}" 3 -1 TRIMMED_PPU_VBL_NMI_NAME)
  add_test("ppu_vbl_nmi.${TRIMMED_PPU_VBL_NMI_NAME}" blargg ${PPU_VBL_NMI_FILE})
endforeach()